<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_smile"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="40dp"
        android:contentDescription="@string/smile"
        android:src="@drawable/ic_smile"
        app:layout_constraintBottom_toTopOf="@id/tv_min_answers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_min_answers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/min_answers"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/tv_score"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tv_score"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/tv_min_percent"
        app:layout_constraintEnd_toEndOf="@id/tv_min_answers"
        app:layout_constraintStart_toStartOf="@id/tv_min_answers"
        app:layout_constraintTop_toBottomOf="@id/tv_min_answers" />

    <TextView
        android:id="@+id/tv_min_percent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/min_percent"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/tv_percent"
        app:layout_constraintEnd_toEndOf="@id/tv_min_answers"
        app:layout_constraintStart_toStartOf="@id/tv_min_answers"
        app:layout_constraintTop_toBottomOf="@id/tv_score" />

    <TextView
        android:id="@+id/tv_percent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/percent_of_right_answers"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/button_try_again"
        app:layout_constraintEnd_toEndOf="@id/tv_min_answers"
        app:layout_constraintStart_toStartOf="@id/tv_min_answers"
        app:layout_constraintTop_toBottomOf="@id/tv_min_percent" />

    <Button
        android:id="@+id/button_try_again"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/try_again"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>